--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,21 @@
 [data-bs-theme="dark"] .duds_mo_bgc {
   background-color: var(--main-bg-color-dark);
 }
+
+.social {
+  display: flex;
+  justify-content: center;
+}
+
+.social a {
+  width: 180px;
+  margin: 0 20px;
+  padding: 0;
+}
+
+.social img {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  object-fit: cover;
+}
