--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,14 @@
 }
 
 #logo {
+  width: 3rem;
+  height: 3rem;
+}
+
+/* #logo {
   width: 100px;
   height: 100px;
-}
+} */
 
 [data-bs-theme="light"] .duds_mo_bgc {
   background-color: var(--main-bg-color-light);
