--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,15 @@
   height: 3rem;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+
+* {
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
 /* #logo {
   width: 100px;
   height: 100px;
