--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,24 @@
 }
 
 #logo {
-  width: 3rem;
-  height: 3rem;
+  width: 5rem;
+  height: 5rem;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
-
+/* Font */
 * {
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+}
+
+.large_font {
+  font-size: 25px;
+}
+
+.mid_font {
+  font-size: 18px;
 }
 
 /* #logo {
